moved detect_text_language to utils

--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -233,19 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "id": "CU7wQCewxyWc"
-   },
-   "outputs": [],
-   "source": [
-    "def detect_text_language(text: str) -> Dict[str, Any]:\n",
-    "    \"\"\"Detect language text is written in and return id of the language\"\"\"\n",
-    "    return langid.classify(text)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "e6xknyGKwQJz"
    },
@@ -302,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -373,7 +360,7 @@
     }
    ],
    "source": [
-    "texts_with_language_ids = [{\"language_id\": detect_text_language(text[\"text_cleaned\"])} | text\n",
+    "texts_with_language_ids = [{\"language_id\": utils.detect_text_language(text[\"text_cleaned\"])} | text\n",
     "                            for text in texts_cleaned]\n",
     "show_example_text(texts_with_language_ids[0], skipped_fields=[\"text_original\"])"
    ]
@@ -387,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -422,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "id": "bOSpuE_xsvgX"
    },
@@ -697,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -726,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.5 Recognise text from pdf or image with optical character recognition (ocr)\n",
+    "### 5.5 Recognise text from pdf or image with optical character recognition (ocr)\n",
     "\n",
     "We have a separate notebook for this task: `../data_preparation/Run-Docling.ipynb`"
    ]
