added google colab link

--- a/notebooks/tasks/disambiguation-candidates.ipynb
+++ b/notebooks/tasks/disambiguation-candidates.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "86212093-694f-46c4-a9e1-100321cd75a7",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/pelagios/llm-lod-enriching-heritage/blob/main/notebooks/tasks/disambiguation-candidates.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3c6a1c79",
    "metadata": {},
    "source": [
