--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1bab1756-a7f0-46cb-861b-c3e90fea3ba8",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/pelagios/llm-lod-enriching-heritage/blob/main/notebooks/tasks/entity_linking.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0dbc201a-4ecd-4714-be9e-2b35a1f6922d",
    "metadata": {},
    "source": [
