--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -71,10 +71,9 @@
    },
    "outputs": [],
    "source": [
-    "import regex\n",
     "import hashlib\n",
     "import importlib\n",
-    "from IPython.display import clear_output\n",
+    "from IPython.display import clear_output, HTML\n",
     "import json\n",
     "import regex\n",
     "import requests\n",
