defined file dependencies

--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -42,7 +42,18 @@
     "\n",
     "The fifth chapter provides alternatives for handling texts from other sources than websites:\n",
     "\n",
-    "5. Alternatives for reading text data: text defined in code, text from file, text from pdf file and text from a website"
+    "5. Alternatives for reading text data: text defined in code, text from file, text from pdf file and text from a website\n",
+    "\n",
+    "### Dependencies\n",
+    "\n",
+    "This notebook depends on four files:\n",
+    "\n",
+    "* utils.py: helper functions\n",
+    "* input_em.csv: default example input file (table)\n",
+    "* input_wanderer.pdf: example pdf input file\n",
+    "* input_wikipedia.txt: example text input file\n",
+    "\n",
+    "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from "
    ]
   },
   {
