defined file dependencies

--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -53,7 +53,7 @@
     "* input_wanderer.pdf: example pdf input file\n",
     "* input_wikipedia.txt: example text input file\n",
     "\n",
-    "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from "
+    "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from [Github](https://github.com/pelagios/llm-lod-enriching-heritage/tree/main/notebooks/tasks)."
    ]
   },
   {
