defined file dependencies

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -32,7 +32,16 @@
     "4. **Named entity visualization**: The annotated text is displayed with colour-coded entity highlighting\n",
     "5. **Save results**: Save the results of named entity recognition for future processing\n",
     "\n",
-    "This approach leverages the LLM's natural language understanding while producing structured, machine-readable output."
+    "This approach leverages the LLM's natural language understanding while producing structured, machine-readable output.\n",
+    "\n",
+    "### Dependencies\n",
+    "\n",
+    "This notebook depends on two files:\n",
+    "\n",
+    "* utils.py: helper functions\n",
+    "* ner_cache.json\n",
+    "\n",
+    "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from [Github](https://github.com/pelagios/llm-lod-enriching-heritage/tree/main/notebooks/tasks)"
    ]
   },
   {
