added input file dependency

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -39,7 +39,8 @@
     "This notebook depends on two files:\n",
     "\n",
     "* utils.py: helper functions\n",
-    "* ner_cache.json\n",
+    "* output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json: output file of data preparation task\n",
+    "* ner_cache.json: context-dependent cache of names found earlier\n",
     "\n",
     "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from [Github](https://github.com/pelagios/llm-lod-enriching-heritage/tree/main/notebooks/tasks)."
    ]
