harmonized writing json files

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -265,8 +265,8 @@
     "            if entity[\"text\"] not in linking_cache[entity[\"entity_text\"]]:\n",
     "                linking_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
     "            linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = entity[\"link\"][model]\n",
-    "    utils.write_json_file(LINKING_CACHE_FILE, linking_cache)\n",
     "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file(linking_cache, file_name=LINKING_CACHE_FILE, in_colab=in_colab)\n",
     "    return entities"
    ]
   },
@@ -290,6 +290,7 @@
      "text": [
       "Retrieving entity \"Bagnani\" of text 100 from cache\n",
       "Finished processing\n",
+      "️✅ Saved data to file linking_cache_123dc2598ed9928793036410b9aa30be38b190de.json\n",
       "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Anubis', 'wikidata_id': 'Q47534', 'link': '1'}]}\n"
      ]
     }
@@ -389,12 +390,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_linking_d14c085be6d666bfa938a7537b06fd1f031347ab.json\n"
+      "️✅ Saved data to file output_linking.ipynb\n"
      ]
     }
    ],
    "source": [
-    "utils.save_results(texts_output, \"linking_\", in_colab=in_colab)"
+    "utils.save_data_to_json_file(texts_output, file_name=\"output_linking.ipynb\", in_colab=in_colab)"
    ]
   },
   {
