harmonized writing json files

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "37f5ff2d-7192-4487-9ed1-c02abcbccf83",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "51cef27a-cca0-45b9-a20d-893b3bf0ae38",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1b0f1136-7f0c-47a4-8aaf-ce819ebcf45b",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f01e81fa-5a4a-4ed3-abfd-4008f645dac4",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f4c2434c-50a4-4c1f-82a2-610fad9d247d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [],
@@ -219,10 +219,11 @@
     "            utils.squeal(f\"Processing text {index + 1} with GPT\")\n",
     "            prompt = make_prompt(text, target_labels)\n",
     "            texts_output.append(utils.process_text_with_gpt(openai_client, model, prompt))\n",
-    "    utils.write_json_file(NER_CACHE_FILE, \n",
-    "                          {text_input: {model: text_output} \n",
-    "                           for text_input, text_output in zip(texts_input, texts_output)})\n",
     "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file({text_input: {model: text_output} \n",
+    "                                 for text_input, text_output in zip(texts_input, texts_output)},\n",
+    "                                 file_name=NER_CACHE_FILE, \n",
+    "                                 in_colab=in_colab)\n",
     "    return texts_output"
    ]
   },
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a66bff5e-3e90-40e9-8b9b-d595661006d1",
    "metadata": {},
    "outputs": [
@@ -246,6 +247,7 @@
      "text": [
       "Retrieving entities for text 100 from cache\n",
       "Finished processing\n",
+      "️✅ Saved data to file ner_cache_82d40eb51c265a0aeac8b70d594ba71a6208024c.json\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -444,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -452,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\n"
+      "️✅ Saved data to file output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\n"
      ]
     }
    ],
@@ -460,7 +462,7 @@
     "for index, entities in enumerate(entities_all):\n",
     "    input_data[index][\"entities\"] = entities[\"entities\"]\n",
     "    input_data[index][\"text_llm_output\"] = entities[\"text_llm_output\"]\n",
-    "utils.save_results(input_data, key=\"ner_\", in_colab=in_colab)"
+    "utils.save_data_to_json_file(input_data, file_name=\"output_ner.json\", in_colab=in_colab)"
    ]
   },
   {
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
