harmonized writing json files

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -36,7 +36,18 @@
     "3. **Candidate extraction**\n",
     "4. **Disambiguation**: The text is sent to GPT with a prompt that instructs it to disambiguate entities based on the available candidates.\n",
     "5. **Disambiguation visualization**: The annotated text is displayed with colour-coded entity highlighting\n",
-    "6. **Save results**: Save the results of the disambiguation process for future processing"
+    "6. **Save results**: Save the results of the disambiguation process for future processing\n",
+    "\n",
+    "### Dependencies\n",
+    "\n",
+    "This notebook depends on four files:\n",
+    "\n",
+    "* utils.py: helper functions\n",
+    "* output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json: output file of NER task\n",
+    "* disambiguation_cache_wikidata.json: context-dependent cache of WikiData information found earlier\n",
+    "* disambiguation_cache_gpt.json: context-dependent cache of GPT choices make earlier\n",
+    "\n",
+    "Please make sure the files are available in this folder so that the notebook can run smoothly. You can download the files from Github."
    ]
   },
   {
@@ -50,17 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ce150ce5-8f61-40b5-830a-c38159ede173",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f8fb2b75-48c8-4336-b647-d7b9bbedb631",
    "metadata": {},
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "37a02df6",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "684d7adb-4839-49be-9a32-3b0fa15700e9",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2751ca67-3c31-4a56-ab87-532231cb80de",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e9f3d702-647d-4c64-acab-8da3028f7acb",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "495787e4-d72b-43c4-9834-dbd65174cef1",
    "metadata": {},
    "outputs": [],
@@ -206,39 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "bb658c10-b74e-4a2e-851a-9fb4a2dfba5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DISAMBUGUATION_CACHE_FILE_WIKIDATA = \"disambiguation_cache_wikidata.json\"\n",
-    "\n",
-    "def read_json_file(file_name):\n",
-    "    \"\"\"Read a json file and return its contents\"\"\"\n",
-    "    with open(file_name, \"r\") as infile:\n",
-    "        json_data = json.load(infile)\n",
-    "        infile.close()\n",
-    "    return json_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e59f1969-2ad2-4bf9-aff1-d200255d2bcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_json_file(file_name, json_data):\n",
-    "    \"\"\"Write json data to a file with the specified name\"\"\"\n",
-    "    json_string = json.dumps(json_data, ensure_ascii=False, indent=2)\n",
-    "    with open(file_name, \"w\") as outfile:\n",
-    "        print(json_string, end=\"\", file=outfile)\n",
-    "        outfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c4087c95-0ee6-4b3e-865e-1258c7d4fbfc",
    "metadata": {},
    "outputs": [],
@@ -253,14 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "31eaf53f-ce28-4125-81bd-567a3ab793fd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "DISAMBUGUATION_CACHE_FILE_WIKIDATA = \"disambiguation_cache_wikidata.json\"\n",
+    "\n",
+    "\n",
     "def find_wikidata_candidates_for_entities(entities):\n",
     "    \"\"\"Lookup candidate ids for the entities on wikidata.org and return them\"\"\"\n",
-    "    wikidata_cache = read_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA)\n",
+    "    wikidata_cache = utils.read_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA)\n",
     "    for entity in entities:\n",
     "        if entity[\"entity_text\"] not in wikidata_cache.keys():\n",
     "            utils.squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
@@ -269,7 +240,8 @@
     "                                                            \"description\": candidate[\"description\"]} \n",
     "                                                            for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
     "                                                            if \"description\" in candidate.keys()]\n",
-    "    write_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA, wikidata_cache)\n",
+    "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file(wikidata_cache, file_name=DISAMBUGUATION_CACHE_FILE_WIKIDATA, in_colab=in_colab)\n",
     "    for entity in entities:\n",
     "        entity[\"candidates\"] = wikidata_cache[entity[\"entity_text\"]]\n",
     "    return entities"
@@ -285,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2df11bef-291b-4dab-b907-8291370ebff4",
    "metadata": {},
    "outputs": [
@@ -293,6 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Finished processing\n",
+      "️✅ Saved data to file disambiguation_cache_wikidata_e6fd4d497115ccd91d6eec35cc8d731aafe699bf.json\n",
       "{'entity_text': 'Anubis', 'candidates': [{'id': 'Q14896497', 'description': 'genus of insects'}, {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'}, {'id': 'Q134301689', 'description': 'anti-web scraping software'}, {'id': 'Q135055514', 'description': 'video game developed by OA Game Studio'}, {'id': 'Q145772', 'description': 'asteroid'}, {'id': 'Q5514020', 'description': 'daemon that sits between the Mail User Agent (MUA) and the Mail Transfer Agent (MTA)'}, {'id': 'Q108330387', 'description': 'British Drag Queen'}]}\n"
      ]
     }
@@ -323,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
    "metadata": {},
    "outputs": [],
@@ -345,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "5c70ab90-9295-4c8f-9297-71353572c75e",
    "metadata": {},
    "outputs": [],
@@ -369,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "88389bc3-40ce-48fc-9178-b3c3e58edf6f",
    "metadata": {},
    "outputs": [],
@@ -381,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "541cb7d5-8807-4156-9d4f-ae35cd2def12",
    "metadata": {},
    "outputs": [],
@@ -409,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "75deea80-7bab-41cf-b0ac-fb4217c3010a",
    "metadata": {},
    "outputs": [],
@@ -420,7 +394,7 @@
     "def openai_wikidata_id_selection(model, entities):\n",
     "    openai_api_key = get_openai_api_key()\n",
     "    openai_client = connect_to_openai(openai_api_key)\n",
-    "    gpt_cache = read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
+    "    gpt_cache = utils.read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
     "    for entity in entities:\n",
     "        if (entity[\"entity_text\"] in gpt_cache and \n",
     "            entity[\"text\"] in gpt_cache[entity[\"entity_text\"]] and\n",
@@ -438,14 +412,14 @@
     "            gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = {key: value \n",
     "                                                                       for key, value in entity[\"wikidata_id\"].items()\n",
     "                                                                       if key != model}\n",
-    "    write_json_file(DISAMBUGUATION_CACHE_FILE_GPT, gpt_cache)\n",
     "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file(gpt_cache, file_name=DISAMBUGUATION_CACHE_FILE_GPT, in_colab=in_colab)\n",
     "    return entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "f2cf750e-8af4-40c3-9951-bb32b5df2da3",
    "metadata": {},
    "outputs": [],
@@ -474,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "61717672-8733-4f59-b564-b060e5e88ee8",
    "metadata": {},
    "outputs": [
@@ -484,6 +458,7 @@
      "text": [
       "Retrieving entity \"Bagnani\" of text 100 from cache\n",
       "Finished processing\n",
+      "️✅ Saved data to file disambiguation_cache_gpt_f1509285434c063ab7af49257681f838bef26045.json\n",
       "{'entity_text': 'Anubis', 'text': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'wikidata_id': {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head', 'model': 'gpt-4o-mini'}}\n"
      ]
     }
@@ -514,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "867bafc8-2fce-4d03-a8db-9f9296b1f16d",
    "metadata": {},
    "outputs": [
@@ -573,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "3db2ed8b-d12b-4945-b749-446c0f8b476d",
    "metadata": {},
    "outputs": [
@@ -581,12 +556,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json\n"
+      "️✅ Saved data to file output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json\n"
      ]
     }
    ],
    "source": [
-    "utils.save_results(texts_output, \"disambiguation_\", in_colab=in_colab)"
+    "utils.save_data_to_json_file(texts_output, file_name=\"output_disambiguation.json\", in_colab=in_colab)"
    ]
   },
   {
