--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -40,7 +40,17 @@
     "2. Read the text that requires processing: Next we obtain the input text from the Disambiguation notebook\n",
     "3. Linking: The text is sent to GPT with a prompt that instructs it to select the best type for the link between the artefact and the entity\n",
     "4. Linking visualization: The link type is displayed in text with colour-coded entities\n",
-    "5. Save results: Save the results of the linking process for future processing"
+    "5. Save results: Save the results of the linking process for future processing\n",
+    "\n",
+    "### Dependencies\n",
+    "\n",
+    "This notebook depends on three files:\n",
+    "\n",
+    "* utils.py: helper functions\n",
+    "* output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json: output file of disambiguation task\n",
+    "* linking_cache.json: context-dependent cache of linking analysis performed earlier\n",
+    "\n",
+    "Please make sure they are available in this folder so that the notebook can run smoothly. You can download them from Github."
    ]
   },
   {
@@ -54,17 +64,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a4f7d889-d4ca-4a02-86ac-97796708e7a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9f735231-ad73-4158-aefe-4935532f3a90",
    "metadata": {},
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4fd95fe3-bc47-413d-9e37-274820524903",
    "metadata": {},
    "outputs": [],
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "78ef6754-ccb7-40dc-ad6f-4064b93b1f0e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1471a3c9-2f1c-45ca-aa3c-7c47cbb12f29",
    "metadata": {},
    "outputs": [],
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
    "metadata": {},
    "outputs": [
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5504175d-8caf-4917-b181-5f449cc7f4e6",
    "metadata": {},
    "outputs": [],
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9fd0b672-7c62-4cdc-9e92-80c1a6f2f31b",
    "metadata": {},
    "outputs": [],
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2e34a6d1-e14f-4230-8a1e-55a068c0c2aa",
    "metadata": {},
    "outputs": [],
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "30bd265f-5c55-42b4-9f06-b603a024e592",
    "metadata": {},
    "outputs": [
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "460020ff-a77c-45ad-a9c5-456f9608e074",
    "metadata": {},
    "outputs": [
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "09bad32c-1c93-4d99-b6a1-9896acda1676",
    "metadata": {},
    "outputs": [
