harmonized writing json files

--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -86,7 +86,6 @@
     "import importlib\n",
     "from IPython.display import clear_output, HTML\n",
     "import json\n",
-    "import regex\n",
     "import requests\n",
     "import subprocess\n",
     "import sys\n",
@@ -426,12 +425,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json\n"
+      "️✅ Saved data to file output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json\n"
      ]
     }
    ],
    "source": [
-    "utils.save_results(texts_preprocessed, key=\"data_preparation_\", in_colab=in_colab)"
+    "utils.save_data_to_json_file(texts_preprocessed, file_name=\"output_data_preparation.json\", in_colab=in_colab)"
    ]
   },
   {
