used functions from utils

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -262,12 +262,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished processing\n",
-      "️✅ Saved data to file disambiguation_cache_wikidata_e6fd4d497115ccd91d6eec35cc8d731aafe699bf.json\n",
-      "{'entity_text': 'Anubis', 'candidates': [{'id': 'Q14896497', 'description': 'genus of insects'}, {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'}, {'id': 'Q134301689', 'description': 'anti-web scraping software'}, {'id': 'Q135055514', 'description': 'video game developed by OA Game Studio'}, {'id': 'Q145772', 'description': 'asteroid'}, {'id': 'Q5514020', 'description': 'daemon that sits between the Mail User Agent (MUA) and the Mail Transfer Agent (MTA)'}, {'id': 'Q108330387', 'description': 'British Drag Queen'}]}\n"
+     "ename": "AttributeError",
+     "evalue": "module 'utils' has no attribute 'read_json_file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m entities \u001b[38;5;241m=\u001b[39m extract_entities_from_ner_input(texts_input)\n\u001b[0;32m----> 2\u001b[0m entities \u001b[38;5;241m=\u001b[39m \u001b[43mfind_wikidata_candidates_for_entities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mentities\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m({key: entities[\u001b[38;5;241m0\u001b[39m][key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentity_text\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcandidates\u001b[39m\u001b[38;5;124m'\u001b[39m]})\n",
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m, in \u001b[0;36mfind_wikidata_candidates_for_entities\u001b[0;34m(entities)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mfind_wikidata_candidates_for_entities\u001b[39m(entities):\n\u001b[1;32m      5\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Lookup candidate ids for the entities on wikidata.org and return them\"\"\"\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m     wikidata_cache \u001b[38;5;241m=\u001b[39m \u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_json_file\u001b[49m(DISAMBUGUATION_CACHE_FILE_WIKIDATA)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m entity \u001b[38;5;129;01min\u001b[39;00m entities:\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m entity[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mentity_text\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m wikidata_cache\u001b[38;5;241m.\u001b[39mkeys():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'utils' has no attribute 'read_json_file'"
      ]
     }
    ],
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
    "metadata": {},
    "outputs": [],
@@ -318,62 +321,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5c70ab90-9295-4c8f-9297-71353572c75e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_openai_api_key():\n",
-    "    \"\"\"Extract OpenAI API key from environment or file and return it\"\"\"\n",
-    "    load_dotenv()\n",
-    "    openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "    if not openai_api_key:\n",
-    "        try:\n",
-    "            with open(\"OPENAI_API_KEY\", \"r\") as infile:\n",
-    "                openai_api_key = infile.read().strip()\n",
-    "                infile.close()\n",
-    "        except:\n",
-    "            pass\n",
-    "    if not openai_api_key:\n",
-    "        print(f\"{utils.CHAR_FAILURE} no openai_api_key found!\")\n",
-    "        return \"\"\n",
-    "    return openai_api_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "88389bc3-40ce-48fc-9178-b3c3e58edf6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def connect_to_openai(openai_api_key):\n",
-    "    \"\"\"Connect to OpenAI and return processing space\"\"\"\n",
-    "    return openai.OpenAI(api_key=openai_api_key)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "541cb7d5-8807-4156-9d4f-ae35cd2def12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_text_with_gpt(openai_client, model, prompt):\n",
-    "    \"\"\"Send text to OpenAI via prompt and return results\"\"\"\n",
-    "    try:\n",
-    "        response = openai_client.chat.completions.create(\n",
-    "            model=model,\n",
-    "            messages=[{\"role\": \"user\", \"content\": prompt}]\n",
-    "        )\n",
-    "        return response.choices[0].message.content\n",
-    "    except:\n",
-    "        print(f\"{utils.CHAR_FAILURE} GPT call failed\")\n",
-    "        return []"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ef64fd3d-e7fc-41b7-b505-57c0425ef9a3",
    "metadata": {},
@@ -383,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "75deea80-7bab-41cf-b0ac-fb4217c3010a",
    "metadata": {},
    "outputs": [],
@@ -392,8 +339,8 @@
     "model = \"gpt-4o-mini\"\n",
     "\n",
     "def openai_wikidata_id_selection(model, entities):\n",
-    "    openai_api_key = get_openai_api_key()\n",
-    "    openai_client = connect_to_openai(openai_api_key)\n",
+    "    openai_api_key = utils.get_openai_api_key()\n",
+    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
     "    gpt_cache = utils.read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
     "    for entity in entities:\n",
     "        if (entity[\"entity_text\"] in gpt_cache and \n",
@@ -404,7 +351,7 @@
     "        else:\n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
     "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
-    "            entity[\"wikidata_id\"] = {model: process_text_with_gpt(openai_client, model, prompt)}\n",
+    "            entity[\"wikidata_id\"] = {model: utils.process_text_with_gpt(openai_client, model, prompt)}\n",
     "            if entity[\"entity_text\"] not in gpt_cache:\n",
     "                gpt_cache[entity[\"entity_text\"]] = {}\n",
     "            if entity[\"text\"] not in gpt_cache[entity[\"entity_text\"]]:\n",
@@ -419,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f2cf750e-8af4-40c3-9951-bb32b5df2da3",
    "metadata": {},
    "outputs": [],
@@ -448,21 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "61717672-8733-4f59-b564-b060e5e88ee8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieving entity \"Bagnani\" of text 100 from cache\n",
-      "Finished processing\n",
-      "️✅ Saved data to file disambiguation_cache_gpt_f1509285434c063ab7af49257681f838bef26045.json\n",
-      "{'entity_text': 'Anubis', 'text': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'wikidata_id': {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head', 'model': 'gpt-4o-mini'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "entities = openai_wikidata_id_selection(model, entities)\n",
     "texts_output = add_wikidata_ids_to_texts_input(texts_input, entities)\n",
@@ -489,47 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "867bafc8-2fce-4d03-a8db-9f9296b1f16d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span><sup>Q47534</sup>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span><sup>Q146104</sup> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583</sup> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606</sup> (1390-1353 BC)."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span><sup>Q129106</sup>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895</sup> collection (1824). C. 271"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
@@ -548,18 +447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3db2ed8b-d12b-4945-b749-446c0f8b476d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "️✅ Saved data to file output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utils.save_data_to_json_file(texts_output, file_name=\"output_disambiguation.json\", in_colab=in_colab)"
    ]
