fixed wrong parameter name

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -241,7 +241,7 @@
     "model = \"gpt-4o-mini\"\n",
     "\n",
     "\n",
-    "def openai_link_suggestion(model, entities):\n",
+    "def openai_link_suggestion(model, texts_input):\n",
     "    openai_api_key = utils.get_openai_api_key()\n",
     "    openai_client = utils.connect_to_openai(openai_api_key)\n",
     "    entities = utils.extract_entities_from_ner_input(texts_input)\n",
